fixed layout issues with line breaks and spaces.

--- a/src/main/resources/Chinese Word Web App/app/custom_css/chinese.css
+++ b/src/main/resources/Chinese Word Web App/app/custom_css/chinese.css
@@ -5,14 +5,15 @@ ul {
     clear: both;
     list-style-type: none;
 }
-.container {
+.words_container {
     position: relative;
     width: 65px;
     height: 50px;
-    background: silver;  //remove this to make it white like in your pic
+    background: silver;
     display: inline;
     white-space:nowrap;
     float:left;
+    display: table-cell;
 }
 .letter {
     position: absolute;
@@ -62,8 +63,8 @@ ul {
     position: relative;
     width: 165px;
     height: 50px;
-    #background: silver;  //remove this to make it white like in your pic
-display: inline;
+    background: silver;
+    display: inline;
     white-space:nowrap;
     float:left;
 }
@@ -175,11 +176,34 @@ display: inline;
     left: 125px;
     width: 20%;
 }
-.words_container {
+.lines_container {
     position: absolute;
     left: 275px;
     width: 60%;
+    display: table-row;
+}
+.line_container {
+    position: relative;
+    width: 100%;
+    display: table-row;
 }
 input.std5digits{
     width: 25px;
+}
+.button_generic {
+    background-color: #ccc;
+    -moz-border-radius: 5px;
+    -webkit-border-radius: 5px;
+    border-radius:6px;
+    color: #fff;
+    font-family: 'Oswald';
+    font-size: 12px;
+    text-decoration: none;
+    cursor: pointer;
+    border:none;
+}
+.button_generic:hover {
+    border: none;
+    background:red;
+    box-shadow: 0px 0px 1px #777;
 }
